--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 4.25.1, Date: 2020-12-16
+- Fixed an issue with missing messages in the locale files
+
 Version: 4.25.0, Date: 2020-12-14
 - Fixed an issue in the data collection content script
 - Removed the functionality to open the /update page
