--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -1138,7 +1138,7 @@
     "description": "Title for the popup menu."
   },
   "block_an_ad_on_this_page": {
-    "message": "Ocultar algo nesta página",
+    "message": "Bloqueie um anúncio nessa página",
     "description": "Toolbar button menu entry and context menu entry"
   },
   "block_this_ad": {
@@ -1237,25 +1237,9 @@
     "message": "Não execute em páginas desse domínio",
     "description": "Menu entry to open the allowlist wizard"
   },
-  "open_allowlist_wizard": {
-    "message": "Mais opções de pausa",
+  "dont_run_on_pages_on_site": {
+    "message": "Não execute em páginas desse site",
     "description": "Menu entry to open the allowlist wizard"
-  },
-  "disabled_site_title": {
-    "message": "Nada para bloquear aqui!",
-    "description": "header title on the menu when a user is on tab that extensions are disabled on (Chrome settings, etc)"
-  },
-  "allowlisted_channel": {
-    "message": "Você configurou o AdBlock para permanecer pausado neste canal a cada visita.",
-    "description": "Message shown in toolbar button on web pages that have been allowlisted"
-  },
-  "disabled": {
-    "message": "O AdBlock está pausado",
-    "description": "Title shown in menu when AdBlock is paused on all sites"
-  },
-  "disabled_on_all_sites": {
-    "message": "Você configurou o AdBlock para permanecer pausado em todos os sites.",
-    "description": "Message shown in menu when AdBlock is paused on all sites"
   },
   "disabled_on_this_page": {
     "message": "AdBlock está desabilitado nessa página.",
@@ -1282,12 +1266,8 @@
     "description": "Message shown in toolbar button when AdBlock is not running on all domains"
   },
   "status_domain_paused": {
-    "message": "O AdBlock está pausado para esta visita. Talvez você precise atualizar a página para ver as suas mudanças.",
+    "message": "AdBlock está pausado nesse site.",
     "description": "Message shown in toolbar button when AdBlock is not running on a specific domain"
-  },
-  "status_allowlisted": {
-    "message": "Você configurou o AdBlock para permanecer pausado neste site a cada visita.",
-    "description": "Message shown in toolbar button when AdBlock is not running on a page or website"
   },
   "resume_blocking_ads": {
     "message": "Retomar o bloqueio de anúncios",
@@ -1360,7 +1340,7 @@
     "description": "Menu entry to let the user cancel the result of running the blocklist wizard."
   },
   "undo_last_block_site": {
-    "message": "Reverter meus itens ocultados",
+    "message": "Desfazer meus bloqueios nesse site",
     "description": "Menu entry to let the user cancel the result of running the blocklist wizard."
   },
   "dont_run_on_this_page": {
@@ -1573,8 +1553,8 @@
     "message": " -- Selecione o idioma -- ",
     "description": "First option in the language dropdown menu on the Filter lists tab. Include the ' -- ' on either side of your translation."
   },
-  "allowlist_channel": {
-    "message": "Permitir anúncios neste canal",
+  "whitelist_channel": {
+    "message": "Permitir anúncios nesse canal",
     "description": "Entry in the AdBlock menu, only displayed when a user is browsing YouTube or Twitch and has enabled the YouTube or Twitch channel allow listing option"
   },
   "manage_subscribed_channel": {
@@ -1903,6 +1883,14 @@
     "message": "Habilitar MyAdBlock",
     "description": "The text of the menu item in the popup menu that takes you to the MyAdBlock Enrollment page"
   },
+  "adblockprotectenrollmentbutton": {
+    "message": "Experimente agora — É gratuito",
+    "description": "The text of the button in the menu item in the popup menu for AdBlock Protect extension.  Will automatically be converted to all uppercase"
+  },
+  "adblockprotectenrollmenttext": {
+    "message": "Mantenha suas informações pessoais em segurança com o AdBlock Protect",
+    "description": "The text of the menu item in the popup menu that takes users for the AdBlock Protect extension"
+  },
   "myadblockoptionspageheader": {
     "message": "Opções MyAdBlock",
     "description": "The text of the header the MyAdBlock Options page"
@@ -1926,22 +1914,6 @@
   "landscapechannelswitchlabel": {
     "message": "Paisagens",
     "description": "The label text for the Landscape switch on the MyAdBlock Options page"
-  },
-  "goatchannelswitchlabel": {
-    "message": "Bodes",
-    "description": "The label text for the Goats switch on the MyAdBlock Options page"
-  },
-  "oceanchannelswitchlabel": {
-    "message": "Oceano",
-    "description": "The label text for the Ocean switch on the MyAdBlock Options page"
-  },
-  "foodchannelswitchlabel": {
-    "message": "Comida",
-    "description": "The label text for the Food switch on the MyAdBlock Options page"
-  },
-  "birdchannelswitchlabel": {
-    "message": "Pássaros",
-    "description": "The label text for the Birds switch on the MyAdBlock Options page"
   },
   "customchannelswitchlabel": {
     "message": "Personalizado",
@@ -2012,39 +1984,27 @@
     "description": "Text on the MyAdBlock feedback button"
   },
   "error_msg_header": {
-    "message": "Opa!",
-    "description": "DO NOT TRANSLATE The text on the popup menu when an error has occurred"
+    "message": "Opa! O menu AdBlock encontrou um problema ao carregar.",
+    "description": "The text on the popup menu when an error has occurred"
   },
-  "error_msg_partI": {
-    "message": "We're sorry, the AdBlock menu had trouble loading.",
-    "description": "DO NOT TRANSLATE The text on the popup menu when an error has occurred"
-  },
-  "error_msg_help_us_partI": {
-    "message": "Help us resolve this problem  ",
-    "description": "DO NOT TRANSLATE"
-  },
-  "error_msg_help_us_partII": {
-    "message": " by sending us some debug data.",
+  "error_msg_help_us": {
+    "message": "Ajude-nos a resolver esse problema nos enviando dados para analisarmos: clique ",
     "description": "DO NOT TRANSLATE"
   },
   "error_msg_thank_you": {
     "message": "Obrigado",
     "description": "The text on the popup menu when an error has occurred"
   },
-  "error_msg_reload_partI": {
-    "message": "Next, try reloading the extension by ",
+  "error_msg_reload": {
+    "message": "Agora, tente recarregar a extensão: clique ",
     "description": "DO NOT TRANSLATE"
   },
-  "error_msg_reload_partII": {
-    "message": "clicking here.",
+  "error_msg_help": {
+    "message": "Caso isso não funcione, obtenha mais ajuda: clique ",
     "description": "DO NOT TRANSLATE"
   },
-  "error_msg_help_partI": {
-    "message": "If that doesn't work, ",
-    "description": "DO NOT TRANSLATE"
-  },
-  "error_msg_help_partII": {
-    "message": "check here for more help.",
+  "error_msg_here": {
+    "message": "aqui",
     "description": "DO NOT TRANSLATE"
   },
   "generaloptions2": {
@@ -2844,8 +2804,8 @@
     "description": "General text used to define the extension options page."
   },
   "pause_on_this_site": {
-    "message": "Pausar neste site:",
-    "description": "First sentence in the aria-label of the pop-up menu action to pause blocking ads on this site. This will be followed by the options 'Once' and 'Always'"
+    "message": "Pausar nesse site.",
+    "description": "First sentence in the aria-label of the pop-up menu action to pause blocking ads on this site."
   },
   "adblock_will_pause_on_this_site": {
     "message": "Caso ativado, AdBlock não vai bloquear anúncios nesse site.",
@@ -3334,13 +3294,5 @@
   "youtube_onpage_icon_no_channels_text": {
     "message": "Inscreva-se em pelo menos um canal do YouTube para gerenciar os anúncios nos canais onde você se inscreveu.",
     "description": "The message text on the YouTube on page panel; shown on https://www.youtube.com/feed/channels"
-  },
-  "once": {
-    "message": "Uma vez",
-    "description": "The button text on the popup menu"
-  },
-  "always": {
-    "message": "Sempre",
-    "description": "The button text on the popup menu"
   }
 }
