--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,10 @@
 
 UNRELEASED:
 
+Version: 4.27.0, Date: 2021-01-14
+- Updated the Support tab on the AdBlock Options page
+- Fixed an issue with our email address in the popup menu help flow
+
 Version: 4.26.0, Date: 2021-01-05
 - Updated the AdBlock popup menu
 
