--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -1604,15 +1604,15 @@
     "description": "Title of the Support tab of the Options page"
   },
   "whatsnew": {
-    "message": "What's new in the latest release? See the [[changelog]]!",
+    "message": "See the latest updates in our [[changelog]]",
     "description": "Link to display the changelog on the Support tab"
   },
   "englishonly": {
     "message": "English only",
     "description": "Lets the user know that a link/page is only available in English."
   },
-  "foundbug": {
-    "message": "Found a bug?",
+  "needhelp": {
+    "message": "Need Help?",
     "description": "Subtitle on the Support tab"
   },
   "adblockupdates": {
@@ -1627,33 +1627,41 @@
     "message": "Want to see what makes AdBlock tick?",
     "description": "Subtitle on the Support tab. This section contains links to the AdBlock source code and contributors. In this context, 'tick' can be replaced with the word 'work'."
   },
-  "questionoridea": {
-    "message": "Got a question or new idea?",
+  "aboutadblock": {
+    "message": "About AdBlock",
     "description": "Subtitle on the Support tab"
   },
   "sourcecode": {
-    "message": "The source code is [[freely available]]!",
+    "message": "Review our [[source code]]",
     "description": "Link to the source code of AdBlock on the Support tab"
   },
   "contributors": {
-    "message": "We've got a page to help you find out the [[people behind AdBlock]], as well!",
+    "message": "Learn more about [[our team]]",
     "description": "Link to the contributors page on the Support tab"
   },
   "debuginfo": {
-    "message": "Has our team requested some debug info? Click [[here]] for that!",
+    "message": "Has our team requested some debug info?",
     "description": "Users can click this link to provide debug information to AdBlock staff"
   },
   "bugreport": {
-    "message": "Why don't you send us a [[bug report]]?",
+    "message": "Send us a [[bug report]]?",
     "description": "Link to send a bug report on the Support tab"
   },
   "supportsite": {
     "message": "Let us know on our [[support site]]!",
     "description": "Link to the support site on the Support tab"
   },
-  "ad_report_please": {
-    "message": "If you're seeing an ad, don't make a bug report, make an [[ad report]]!",
-    "description": "Link to the ad report page on AdBlock's help site. This is found on the Support tab of the options."
+  "helpcenter": {
+    "message": "Visit our [[Help Center]]!",
+    "description": "Link to AdBlock's help site. This is found on the Support tab of the options."
+  },
+  "copydebugdata": {
+    "message": "Copy debug data",
+    "description": "Button text on the Support tab of the options."
+  },
+  "copieddebugdata": {
+    "message": "Copied!",
+    "description": "Button text on the Support tab of the options."
   },
   "resourceblocktitle": {
     "message": "All Resources",
